syntax = "proto3";
package order;

option go_package = "example/order";

import "google/protobuf/wrappers.proto";

service OrderService {
    rpc queryOrders(google.protobuf.StringValue) returns (stream Order) {}; 
    rpc updateOrders(stream Order) returns (google.protobuf.StringValue) {};
    rpc processOrders(stream google.protobuf.Int32Value) returns (stream ShipmentOrder) {};
}

message Order {
  int32 id = 1;
  repeated string goods = 2;
  float price = 3;
}

message ShipmentOrder {
  int32 order_id = 1;
  string status = 2;
}
